@@ -1,3 +1,9 @@
+2002-07-25  Jaka Mocnik  <jaka@gnu.org>
+
+	* src/ghex.h: added prototype for set_prefs();
+	* src/ui.c (prefs_cb): set current values.
+	* src/preferences.c: set OK and apply buttons to insensitive.
+
 2002-07-22  Jaka Mocnik  <jaka@gnu.org>
 
 	* src/session.c: add a "geometry" option.
